do case normalization after long path one, this fixes the problem with incorrect paths case under Vista [backport of r53732 from trunk] (closes #9162)

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_8_BRANCH@58751 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775